# flask-hybrid-webcomponents

./: README.md  pyproject.toml
src/: flask-snowpack-plugin.js  package-lock.json  package.json  snowpack.build.config.js  snowpack.config.js  tsconfig.json
src/components/: index.ts
src/public/: index.html
