[tool.poetry]
name = "webcomponentsjinja"
version = "0.1.0"
description = ""
authors = ["MushroomMaula <maxrd79@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
